task 5 - allocation rule
