# backend/docs/swagger.json
@@ -545,10 +545,6 @@
                 "brand_name": {
                     "type": "string"
                 },
-                "monthly_amount": {
-                    "type": "string",
-                    "example": "416.67"
-                },
                 "number": {
                     "type": "string"
                 },
